<resources>
    <string name="app_name">ZooZooApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shendy Krisyohanda</string>
    <string name="nav_header_subtitle">NIM : 2010817310006</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="setting">Change Languages</string>
    <string name="home_title">Home</string>
    <string name="animals_title">Info Animal</string>
    <string name="african_title">African Animals</string>
    <string name="asian_title">Asian Animals</string>
    <string name="european_title">European Animals</string>
    <string name="north_american_title">North American Animals</string>
    <string name="hello_home_fragment">Welcome to ZooZooApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aardvark_name">Aardvark</string>
    <string name="addax_name">Addax</string>
    <string name="african_civet_name">African Civet</string>
    <string name="hippopotamus_name">Hippopotamus</string>
    <string name="xerus_name">Xerus</string>
    <string name="aardvark_diet">Omnivore</string>
    <string name="addax_diet">Herbivore</string>
    <string name="african_civet_diet">Omnivore</string>
    <string name="hippopotamus_diet">Herbivore</string>
    <string name="xerus_diet">Omnivore</string>
    <string name="aardvark_lifespan">23 years</string>
    <string name="addax_lifespan">19-25 years</string>
    <string name="african_civet_lifespan">15-20 years</string>
    <string name="hippopotamus_lifespan">40-50 years</string>
    <string name="xerus_lifespan">11.5 years</string>
    <string name="aardvark_weight">60kg-80kg</string>
    <string name="addax_weight">Unknown</string>
    <string name="african_civet_weight">1.4kg-4.5kg</string>
    <string name="hippopotamus_weight">1tonne-4.5tonnes</string>
    <string name="xerus_weight">Unknown</string>
    <string name="aardvark_length">3.4ft-7.3ft</string>
    <string name="addax_length">47 to 51 inches</string>
    <string name="african_civet_length">17in-28in</string>
    <string name="hippopotamus_length">6.5ft-16.5ft</string>
    <string name="xerus_length">17in-18in</string>
    <string name="ape_name">Ape</string>
    <string name="dwarf_hamster_name">Dwarf Hamster</string>
    <string name="fire_eel_name">Fire Eel</string>
    <string name="japanese_macaque_name">Japanese Macaque</string>
    <string name="siberian_tiger_name">Siberian Tiger</string>
    <string name="ape_diet">Herbivore</string>
    <string name="dwarf_hamster_diet">Omnivore</string>
    <string name="fire_eel_diet">Omnivore</string>
    <string name="japanese_macaque_diet">Omnivore</string>
    <string name="siberian_tiger_diet">Carnivore</string>
    <string name="ape_lifespan">50 years</string>
    <string name="dwarf_hamster_lifespan">2-3 years</string>
    <string name="fire_eel_lifespan">10-20 years</string>
    <string name="japanese_macaque_lifespan">25-32 years</string>
    <string name="siberian_tiger_lifespan">18-25 years</string>
    <string name="ape_weight">Varies</string>
    <string name="dwarf_hamster_weight">0.71 – 0.88 ounces</string>
    <string name="fire_eel_weight">Unknown</string>
    <string name="japanese_macaque_weight">5kg - 14kg</string>
    <string name="siberian_tiger_weight">100kg - 350kg</string>
    <string name="ape_length">Varies</string>
    <string name="dwarf_hamster_length">5.5 – 10.5 cm</string>
    <string name="fire_eel_length">20 - 40 inches</string>
    <string name="japanese_macaque_length">80cm - 95cm</string>
    <string name="siberian_tiger_length">Unknown</string>
    <string name="barn_owl_name">Barn Owl</string>
    <string name="chamois_name">Chamois</string>
    <string name="grouse_name">Grouse Bird</string>
    <string name="stag_beetle_name">Stag Beetle</string>
    <string name="woodlouse_spider_name">Woodlouse Spider</string>
    <string name="barn_owl_diet">Carnivore</string>
    <string name="chamois_diet">Herbivore</string>
    <string name="grouse_diet">Omnivore</string>
    <string name="stag_beetle_diet">Herbivore</string>
    <string name="woodlouse_spider_diet">Carnivore</string>
    <string name="barn_owl_lifespan">5 - 10 years</string>
    <string name="chamois_lifespan">18 - 22 years</string>
    <string name="grouse_lifespan">1 - 10 years</string>
    <string name="stag_beetle_lifespan">3-7 years</string>
    <string name="woodlouse_spider_lifespan">Unknown</string>
    <string name="barn_owl_weight">300g - 550g</string>
    <string name="chamois_weight">50kg - 55kg</string>
    <string name="grouse_weight">0.3kg - 6.5kg</string>
    <string name="stag_beetle_weight">Up to 0.5 grams</string>
    <string name="woodlouse_spider_weight">Unknown</string>
    <string name="barn_owl_length">25cm - 45cm</string>
    <string name="chamois_length">75cm - 80cm</string>
    <string name="grouse_length">31cm - 95cm</string>
    <string name="stag_beetle_length">1cm – 12.3cm</string>
    <string name="woodlouse_spider_length">0.3inchi-0.5inchi</string>
    <string name="alaskan_husky_name">Alaskan Husky</string>
    <string name="bald_eagle_name">Bald Eagle</string>
    <string name="deer_tick_name">Deer Tick</string>
    <string name="hawaiian_monk_seal_name">Hawaiian Monk Seal</string>
    <string name="pileated_woodpecker_name">Pileated Woodpecker</string>
    <string name="alaskan_husky_diet">Omnivore</string>
    <string name="bald_eagle_diet">Carnivore</string>
    <string name="deer_tick_diet">Omnivore</string>
    <string name="hawaiian_monk_seal_diet">Carnivore</string>
    <string name="pileated_woodpecker_diet">Omnivore</string>
    <string name="alaskan_husky_lifespan">10 – 12 years</string>
    <string name="bald_eagle_lifespan">15-20 years</string>
    <string name="deer_tick_lifespan">2 years</string>
    <string name="hawaiian_monk_seal_lifespan">30 years</string>
    <string name="pileated_woodpecker_lifespan">12 years</string>
    <string name="alaskan_husky_weight">65 lbs</string>
    <string name="bald_eagle_weight">6.6-14lbs</string>
    <string name="deer_tick_weight">Unknown</string>
    <string name="hawaiian_monk_seal_weight">Unknown</string>
    <string name="pileated_woodpecker_weight">8.8 to 12.3 ounces</string>
    <string name="alaskan_husky_length">Unknown</string>
    <string name="bald_eagle_length">28-38 inches</string>
    <string name="deer_tick_length">2-6 mm</string>
    <string name="hawaiian_monk_seal_length">7-8 feet</string>
    <string name="pileated_woodpecker_length">16 to 19 inches</string>
    <string name="detail_animals_name">detail\'s name</string>
    <string name="detail_scientific_name_label">Scientific Name :</string>
    <string name="detail_diet_label">Diet :</string>
    <string name="detail_lifespan_label">Lifespan :</string>
    <string name="detail_weight_label">Weight :</string>
    <string name="detail_lenght_label">Lenght :</string>
    <string name="detail_more_label">Tap the image to know more!</string>
    <string name="info1">
        Aardvarks are small pig-like mammals that are found inhabiting a wide range of different habitats
        throughout Africa, south of the Sahara. They are mostly solitary and spend their days sleeping in
        underground burrows to protect them from the heat of the African sun, emerging in the cooler evening
        to search for food. Their name originates from the Afrikaans language in South Africa and means Earth Pig,
        due to their long snout and pig-like body. Aardvarks are unique among animals as they are the only
        surviving species in their animal family. Until recently it was widely believed that they were most
        closely related to other insectivores such as armadillos and pangolins but this is not the case with
        their closest living relatives actually thought to be elephants.
    </string>
    <string name="info2">
        This beautiful antelope, also called the screwhorn or white antelope once ranged over the Sahara Desert.
        Now it is on the edge of extinction due to poaching, climate change, overhunting, and habitat destruction.
        Fortunately, efforts are being made to return its wild population to healthy numbers.
    </string>
    <string name="info3">
        The African Civet is a large species of Civet found across sub-Saharan Africa. The African Civet is the
        only remaining member in its genetic group and is considered to be the largest Civet-like animal on the
        African continent. Despite their cat-like appearance and behaviours, the African Civets are not felines
        at all but are in fact, more closely related to other small carnivores including Weasels and Mongooses.
        The African Civet is most well known for the musk that it secretes to mark its territory (called Civetone),
        which has been used in the manufacturing of perfumes for centuries, and its striking black and white markings,
        make the African Civet one of the easiest Civet species to identify.
    </string>
    <string name="info4">
        The Hippopotamus is a large semi-aquatic mammal that is found wallowing in the rivers and lakes across sub-Saharan
        Africa. Despite its appearance, the Hippopotamus is an animal that is actually thought to be most closely related
        to Whales as the two are thought to have had a common ancestor that existed roughly 54 million years ago.
        Also known as the Common Hippopotamus, it is one of two Hippo species that are found on the African continent
        with the other being the solitary and forest-dwelling Pygmy Hippopotamus which is only found in western Africa
        and is now Critically Endangered. Although the Common Hippopotamus remains an abundant and widespread animal
        throughout its current range, numbers are reportedly declining due to both hunting and habitat loss.
    </string>
    <string name="info5">
        Xerus erythropus which is commonly known as African ground squirrel and is native to Africa.
        They have coarse and short hair and are known to be social animals. They can survive in captivity for about 11.5 years.
        The males and females live in their separate groups and come together to mate after which the babies live with their mothers in the group of females.
        The Xerus has four subspecies – cape ground squirrel, striped ground squirrel, mountain ground squirrel, and unstriped ground squirrel.
        These animals are diurnal and are usually known to be herbivores in nature and usually eat nuts, roots, and seeds. However,
        sometimes they also eat eggs and other small animals.
    </string>
</resources>