<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.DetailFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/animals_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_animals_name"
        android:textSize="24dp"
        style="@style/text_detail"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_scientific_name_label"
        style="@style/text_label"
        app:layout_constraintEnd_toEndOf="@+id/animals_name"
        app:layout_constraintStart_toStartOf="@+id/animals_name"
        app:layout_constraintTop_toBottomOf="@+id/animals_name" />

    <TextView
        android:id="@+id/scientific_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello"
        style="@style/text_detail"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_diet_label"
        app:layout_constraintEnd_toEndOf="@+id/scientific_name"
        app:layout_constraintStart_toStartOf="@+id/scientific_name"
        app:layout_constraintTop_toBottomOf="@+id/scientific_name" />

    <TextView
        android:id="@+id/animals_diet"
        style="@style/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="World"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_lifespan_label"
        app:layout_constraintEnd_toEndOf="@+id/animals_diet"
        app:layout_constraintStart_toStartOf="@+id/animals_diet"
        app:layout_constraintTop_toBottomOf="@+id/animals_diet" />

    <TextView
        android:id="@+id/animals_lifespan"
        style="@style/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="12 years"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_weight_label"
        app:layout_constraintEnd_toEndOf="@+id/animals_lifespan"
        app:layout_constraintStart_toStartOf="@+id/animals_lifespan"
        app:layout_constraintTop_toBottomOf="@+id/animals_lifespan"/>

    <TextView
        android:id="@+id/animals_weight"
        style="@style/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aardvark_diet"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <TextView
        android:id="@+id/textView5"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_lenght_label"
        app:layout_constraintEnd_toEndOf="@+id/animals_weight"
        app:layout_constraintStart_toStartOf="@+id/animals_weight"
        app:layout_constraintTop_toBottomOf="@+id/animals_weight"/>

    <TextView
        android:id="@+id/animals_length"
        style="@style/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aardvark_diet"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>